--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -1,6 +1,8 @@
 swagger: "2.0"
 info:
-  description: "This specification documents the public API of easy:ems. Services with the 'student' tag require a token containing claim 'easy_role: student' and 'teacher' services analogously require 'easy_role: teacher'."
+  description: "This specification documents the public API of easy:ems. Services with the 'student' tag
+  require a token containing claim 'easy_role: student' and 'teacher' services analogously require 'easy_role: teacher'.
+  'Common' services can be called by either role."
   version: "1.0"
   title: Easy:ems Public API
 schemes:
@@ -14,9 +16,20 @@ basePath: /v1
 tags:
   - name: student
   - name: teacher
+  - name: common
 
 
 paths:
+
+  /register:
+    post:
+      summary: Register account with :ems. Must be called at least once per account before any other services. Has no effect when called multiple times.
+      tags:
+        - common
+      responses:
+        200:
+          description: Registered.
+
 
   /student/courses:
     get:
