--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -535,16 +535,16 @@ definitions:
         type: string
       soft_deadline:
         type: string
+        format: date-time
       grader_type:
         $ref: '#/definitions/GraderType'
+      unstarted_count:
+        type: integer
       graded_count:
         description: Property exists if grader_type == TEACHER.
         type: integer
       ungraded_count:
         description: Property exists if grader_type == TEACHER.
-        type: integer
-      unstarted_count:
-        description: Property exists if grader_type == AUTO.
         type: integer
       started_count:
         description: Property exists if grader_type == AUTO.
