--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -268,6 +268,8 @@ paths:
                 type: integer
               feedback:
                 type: string
+            required:
+              - grade
       responses:
         200:
           description: Created.
