ems student read exercise details service

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -501,9 +501,11 @@ definitions:
         type: string
       text_html:
         type: string
+        description: Optional.
       deadline:
         type: string
         format: date-time
+        description: Optional.
       grader_type:
         $ref: '#/definitions/GraderType'
       threshold:
