--- a/ems/build.gradle
+++ b/ems/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.6.22'
