aas add noauth-prefix to autoassess service url

--- a/doc/aas/api.yaml
+++ b/doc/aas/api.yaml
@@ -126,7 +126,7 @@ paths:
           description: Modified.
 
 
-  /exercises/{exerciseId}/automatic-assessment:
+  /noauth/exercises/{exerciseId}/automatic-assessment:
     parameters:
       - $ref: '#/parameters/ExerciseId'
     post:
