ems teacher read submission summaries return student id

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -594,6 +594,8 @@ definitions:
 
   TeacherSubmissionSummary:
     properties:
+      student_id:
+        type: string
       given_name:
         type: string
       family_name:
