ems return submission id with latest teacher submission

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -611,6 +611,8 @@ definitions:
 
   TeacherSubmission:
     properties:
+      id:
+        type: string
       solution:
         type: string
       created_at:
