--- a/ems/src/main/resources/application.yaml.sample
+++ b/ems/src/main/resources/application.yaml.sample
@@ -22,5 +22,6 @@ easy:
       psk: "<aas-preshared-key>"
     mail:
       sys:
+        enabled: true
         from: "<from-address>"
         to: "<to-address>"
