--- a/aas/build.gradle
+++ b/aas/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.6.22'
