ems student read exercise return ordering index and order by it

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -513,6 +513,8 @@ definitions:
         description: Optional (together with graded_by).
       graded_by:
         $ref: '#/definitions/GraderType'
+      ordering_idx:
+        type: integer
 
   StudentExerciseDetails:
     properties:
