wui add kotlin/js gradle conf

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,18 @@
+
+// Kotlin/JS plugin resolution
+pluginManagement {
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == "kotlin2js") {
+                useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${requested.version}")
+            }
+            if (requested.id.id == "kotlin-dce-js") {
+                useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${requested.version}")
+            }
+        }
+    }
+}
+
 rootProject.name = 'easy'
 
 include 'wui',
