--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -21,7 +21,7 @@ tags:
 
 paths:
 
-  /account/update:
+  /account/personal:
     post:
       summary: Update account data with :ems. Creates account if it does not exist. If the account does not exist, this must be called before any other services.
       tags:
