--- a/wui/src/main/kotlin/AppProperties.kt.sample
+++ b/wui/src/main/kotlin/AppProperties.kt.sample
@@ -2,4 +2,5 @@
 object AppProperties {
     const val EMS_ROOT = "https://dev.ems.lahendus.ut.ee/v2"
     const val KEYCLOAK_CONF_URL = "https://dev.lahendus.ut.ee/static/keycloak.json"
+    const val KEYCLOAK_TOKEN_MIN_VALID_SEC = 30
 }
