E-1003 ems service spec for creation of new course

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -151,6 +151,22 @@ paths:
             type: array
             items:
               $ref: '#/definitions/TeacherCourse'
+    post:
+      summary: Add new course
+      tags:
+        - teacher
+      parameters:
+        - name: course
+          in: body
+          schema:
+            properties:
+              title:
+                type: string
+            required:
+              - title
+      responses:
+        200:
+          description: Course added.
 
 
 
