E-1001 wui serialization util

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,9 @@ pluginManagement {
             if (requested.id.id == "kotlin-dce-js") {
                 useModule("org.jetbrains.kotlin:kotlin-gradle-plugin:${requested.version}")
             }
+            if (requested.id.id == "kotlinx-serialization") {
+                useModule("org.jetbrains.kotlin:kotlin-serialization:${requested.version}")
+            }
         }
     }
 }
