E-1003 ems controller return id with new course creation, updated postman and doc

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -156,7 +156,10 @@ paths:
       responses:
         200:
           description: Course added.
-
+          schema:
+            properties:
+              id:
+                type: string
 
   /teacher/courses:
     get:
