E-1025 ems fix api typo

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -163,8 +163,7 @@ paths:
 
   /teacher/courses:
     get:
-      summary: Get summaries of courses the authenticated teacher has access to. \
-      Get all courses if the caller is an admin.
+      summary: Get summaries of courses the authenticated teacher has access to. Get all courses if the caller is an admin.
       tags:
         - teacher
         - admin
