E-1033 ems update doc for exercise service to return id

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -440,6 +440,10 @@ paths:
       responses:
         200:
           description: Exercise created.
+          schema:
+            properties:
+              id:
+                type: string
 
 
   /teacher/exercises/{exerciseId}:
