E-1036 ems rename title to effective_title in spec

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -527,7 +527,7 @@ definitions:
     properties:
       id:
         type: string
-      title:
+      effective-title:
         type: string
       deadline:
         type: string
