--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -527,7 +527,7 @@ definitions:
     properties:
       id:
         type: string
-      effective-title:
+      effective_title:
         type: string
       deadline:
         type: string
