E-1036 ems update doc for GET /student/courses/{courseId}/exercises/{courseExerciseId}

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -562,7 +562,7 @@ definitions:
 
   StudentExerciseDetails:
     properties:
-      title:
+      effective_title:
         type: string
       text_html:
         type: string
@@ -575,6 +575,8 @@ definitions:
         $ref: '#/definitions/GraderType'
       threshold:
         type: integer
+      instructions_html:
+        type: string
 
   Submission:
     properties:
