E-1036 ems update doc rename title to effective_title in GET /teacher/courses/{courseId}/exercises

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -616,7 +616,7 @@ definitions:
     properties:
       id:
         type: string
-      title:
+      effective_title:
         type: string
       soft_deadline:
         type: string
