E-1036 ems update doc for POST /teacher/courses/{courseId}/exercises

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -234,6 +234,10 @@ paths:
                 type: boolean
               assessments_student_visible:
                 type: boolean
+              instructions_html:
+                type: string
+              title_alias:
+                type: string
             required:
               - exercise_id
               - threshold
