E-1036 ems update doc for GET /teacher/courses/{courseId}/exercises/{courseExerciseId}

--- a/doc/ems/api.yaml
+++ b/doc/ems/api.yaml
@@ -661,6 +661,10 @@ definitions:
         type: boolean
       assessments_student_visible:
         type: boolean
+      instructions_html:
+        type: string
+      title_alias:
+        type: string
 
   TeacherSubmissionSummary:
     properties:
